spacing fixes

--- a/src/assets/scss/elements/_forms.scss
+++ b/src/assets/scss/elements/_forms.scss
@@ -173,6 +173,7 @@ input[type="file"] {
 
 .e-form-btn {
   margin: 20px auto;
+  margin-bottom: 0;
 }
 
 .e-form-error {
